tests/rosetta/transpiler/Zig/additive-primes.error
zig build: exit status 1
/tmp/additive-primes.zig:58:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/additive-primes.zig:58:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
